Fix form input layout bugs on iOS devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,7 +222,7 @@ header {
     outline-style: none;
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 320px) {
     .button {
         padding: 6px;
     }
@@ -294,7 +294,7 @@ header {
     margin-top: 6px;
     margin-bottom: 6px;
     display: block;
-    transition: all 0.4s;
+    transition: all 0.2s;
 }
 
 .line_1,
@@ -479,6 +479,7 @@ button[role="tab"] {
 
 #id_source {
     margin-top: 0px;
+    -webkit-appearance: textfield;
 }
 
 .ui-menu .ui-menu-item-wrapper {
@@ -1014,8 +1015,7 @@ input[type="search"]::-webkit-search-cancel-button:hover {
     background-color: white;
     border-right: 1px solid grey;
     cursor: pointer;
-    padding-left: 9px;
-    padding-right: 9px;
+    margin-right: 10px;
 }
 
 .fa-microphone {
@@ -1250,4 +1250,40 @@ p {
     outline: none !important;
     border: 2px solid white;
     border-radius: 4px;
+}
+
+/* Prevent iOS devices from changing border radius of form fields */
+
+input {
+    -webkit-appearance: none;
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+#id_source {
+    padding-left: 38px;
+    margin-bottom: -30px;
+    border: none;
+}
+
+#id_destination {
+    padding-left: 38px;
+    margin-bottom: -30px;
+    border: none;
+}
+
+@supports (-webkit-touch-callout: none) {
+    #id_source {
+        padding-left: 45px;
+        margin-bottom: -30px;
+        border: none;
+    }
+
+    #id_destination {
+        padding-left: 45px;
+        margin-bottom: -30px;
+        border: none;
+    }
 }
